// gomex options

syntax = "proto3";
package protogen;

import "google/protobuf/descriptor.proto";

// For reference, types of options are:
// FileOptions
// MessageOptions
// FieldOptions
// EnumOptions
// EnumValueOptions
// ServiceOptions
// MethodOptions

extend google.protobuf.MessageOptions {
  bool generate_matches = 51005;
  bool generate_cud = 51006;
  bool obj_key = 51007;
  bool generate_cache = 51008;
  bool notify_cache = 51010;
  bool generate_cud_test = 51011;
  bool generate_show_test = 51012;
  bool generate_cud_streamout = 51014;
  string generate_wait_for_state = 51015;
  bool notify_message = 51016;
  bool notify_custom_update = 51017;
  bool notify_recv_hook = 51018;
  bool notify_filter_cloudlet_key = 51019;
  bool notify_flush = 51020;
  bool notify_print_send_recv = 51022;
  // comma separated list of hierarchical paths for fields to
  // not generate argument flags for Create/Delete/Update commands.
  string noconfig = 51026;
  string alias = 51027;
  string not_required = 51028; // override required key values
  bool generate_cud_test_update = 51030;
  bool generate_addrm_test = 51031;
  bool obj_and_key = 51032;
  string also_required = 51033; // add required key values
}

extend google.protobuf.EnumOptions {
  // This enum has hashes of the model version
  bool version_hash = 51023;
  string version_hash_salt = 51024;
}

extend google.protobuf.EnumValueOptions {
  string upgrade_func = 51025;
}

extend google.protobuf.FieldOptions {
  bool test_update = 51009;
  // backend defines a field that is filled in by the back-end,
  // not by the user.
  bool backend = 51013;
  // hidetag is a string that can be used to hide fields on output objects.
  // it will zero-out the field before generating output, which typically
  // hides it (for json and our custom yaml)
  string hidetag = 52002;
}

extend google.protobuf.MethodOptions {
  string mc2_api = 51021;
  // show stream output objects incrementally as they come, rather than
  // collecting them into one output format. Only applies to commands
  // that return a stream.
  bool stream_out_incremental = 51029;
  bool input_required = 51033; // require input for show commands
  string method_noconfig = 51035; // override message setting
  string method_also_required = 51036; // override message setting
  string method_not_required = 51037; // override message setting
}

extend google.protobuf.ServiceOptions {
  bool dummy_server = 51026;
}